kube/neutrino-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neutrino-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.neutrino.cash
    - neutrino.cash
    secretName: neutrino-tls
  defaultBackend:
    service:
      name: neutrino
      port:
        number: 101
  rules:
  - host: neutrino.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: neutrino
            port:
              number: 101
  - host: www.neutrino.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: neutrino
            port:
              number: 101
